# cuda_raytracing_in_rust

./: CLAUDE.md  Cargo.toml  README.md  build.rs
src/: aabb.rs  bvh.rs  camera.rs  color.rs  common.rs  constant_medium.rs  hittable.rs  hittable_list.rs  interval.rs  main.rs  material.rs  perlin.rs  quad.rs  ray.rs  sphere.rs  texture.rs  vec3.rs
src/gpu/: mod.rs  runtime.rs  scene.rs
src/kernels/: raytrace.cu
